--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
+@font-face {
+    font-family: 'poppinsregular';
+    src: url('../font/poppins-regular-webfont.eot');
+    src: url('../font/poppins-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../font/poppins-regular-webfont.woff2') format('woff2'),
+    url('../font/poppins-regular-webfont.woff') format('woff'),
+    url('../font/poppins-regular-webfont.ttf') format('truetype'),
+    url('../font/poppins-regular-webfont.svg#poppinsregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 *{
     padding: 0;
     margin: 0;
@@ -49,15 +60,11 @@ header ul li:last-of-type a{
     display: inline-block;
     text-decoration: none;
 }
-header ul li:hover{
-    transform: scale(1.2);
 
-}
+
 header ul li:hover a {
-    color: #645C55;
-    background-color: #dedad7;
-    border-radius: 6px;
-    padding: 5px;
+    color: #918378;
+
 }
 .section_main{
     background-color: #ECE7E4;
@@ -75,7 +82,7 @@ header ul li:hover a {
     max-width: 509px
 }
 .section_main_subtitle{
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -84,7 +91,7 @@ header ul li:hover a {
     color: #645C55; margin-bottom: 20px
 }
 .headline{
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-weight: 400;
     font-size: 64px;
     line-height: 70px;
@@ -92,7 +99,7 @@ header ul li:hover a {
     margin-bottom: 18px;
 }
 .section_main_text{
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -100,7 +107,7 @@ header ul li:hover a {
     color: #403E3B; margin-bottom: 41px;
 }
 .section_main_linc{
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -109,6 +116,55 @@ header ul li:hover a {
     color: #1B1A1A; text-decoration: none;
     margin-left: 25px; display: inline-block;
 }
+.our_process{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: #E5E5E5;
+}
+.our_process h4{
+    font: 14px/20px poppinsregular;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #645C55;
+    padding-bottom: 13px;
+
+}
+.our_process h2{
+    font: 39px/42px poppinsregular;
+    text-align: center;
+    color: #1B1A1A;
+    padding-bottom: 47px;
+}
+.box_how_what{
+    max-width: 1168px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+
+}
+.box_how_what .content_box{
+    max-width: 379px;
+    width: 100%;
+    text-align: center;
+    padding: 0 42px 10px;
+}
+.box_how_what .content_box svg{
+    margin-bottom: 15px;
+}
+.box_how_what .content_box h5{
+    font: 18px/26px poppinsregular;
+    color: #403E3B;
+    margin-bottom: 10px;
+}
+.box_how_what .content_box p{
+    font: 15px/24px poppinsregular;
+    color: #645C55;
+}
+
+
+
 .section_contact{
     background-color: #CEC4BC; padding: 100px 0 117px;
 }
@@ -122,7 +178,7 @@ header ul li:hover a {
     max-width: 569px
 }
 .section_contact_content-box_linc{
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -132,7 +188,7 @@ header ul li:hover a {
     color: #645C55; display: inline-block; text-decoration: none
 }
 .section_contact_content-box_subtitle{
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
@@ -141,7 +197,7 @@ header ul li:hover a {
 }
 .section_contact_central-conteiner_linc{
     margin: 45px 20px 0 0;
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -165,7 +221,7 @@ footer{
 }
 .footer_conteiner_text{
     margin-top: 20px;
-    font-family: 'Poppins';
+    font-family: 'poppinsregular';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
