--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ header ul li:hover a {
 }
 .our_process{
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 110px;
     background: #E5E5E5;
 }
 .our_process h4{
@@ -141,14 +141,12 @@ header ul li:hover a {
     margin: auto;
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    /*gap: 10px;*/
 
 }
 .box_how_what .content_box{
-    max-width: 379px;
     width: 100%;
     text-align: center;
-    padding: 0 42px 10px;
 }
 .box_how_what .content_box svg{
     margin-bottom: 15px;
@@ -245,4 +243,11 @@ footer{
     display: flex;
     justify-content: space-between;
 
+
+}
+.owl-item{
+    width: 100%;
+    padding-left: 42px;
+    padding-right: 42px;
+    box-sizing: border-box;
 }
