--- a/css/style.css
+++ b/css/style.css
@@ -296,4 +296,66 @@ button.owl-dot{
     display: inline-flex;
     align-items: center;
 }
+.ui-widget.ui-widget-content {
+     border: none;
+}
+.ui-widget {
+    font: 15px/24px poppinsregular;
+    color: #645C55;
+}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
+    border: none;
+    border-radius: 50%;
+    background: black;
+    color: #FFFFFF;
+}
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus, .ui-button:hover, .ui-button:focus {
+    border: 1px solid #cccccc;
+    border-radius: 50%;
+    background: black;
+    color: #FFFFFF;
+}
+.ui-button .ui-icon {
+    background-image: none;
+}
+label{
+    display: none;
+}
+.form{
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+
+}
+.button_submit:before{
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    cursor: pointer;
+    content: "\f14a";
+    font-size: 25px;
+
+}
+.button_submit{
+    width: 25px;
+    height: 25px;
+}
+button {
+    border: none;
+    background: none;
+}
+.button_submit:hover:before{
+    font-family: "Font Awesome 6 Free";
+    font-weight: 400;
+    cursor: pointer;
+    content: "\f14a";
+    font-size: 25px;
+
+}
+.form input{
+    width: 100%;
+    height: 20px;
+    outline: none;
+    margin-right: 5px;
+    border-radius: 4px;
+}
 
