--- a/css/style.css
+++ b/css/style.css
@@ -304,20 +304,17 @@ button.owl-dot{
     color: #645C55;
 }
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
-    border: none;
+    border: black;
+    border: 2px;
     border-radius: 50%;
-    background: black;
+    background: none;
     color: #FFFFFF;
 }
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus, .ui-button:hover, .ui-button:focus {
-    border: 1px solid #cccccc;
-    border-radius: 50%;
-    background: black;
-    color: #FFFFFF;
+    border: none;
+    background: none;
 }
-.ui-button .ui-icon {
-    background-image: none;
-}
+
 label{
     display: none;
 }
@@ -333,6 +330,7 @@ label{
     cursor: pointer;
     content: "\f14a";
     font-size: 25px;
+    color: #645C55;
 
 }
 .button_submit{
@@ -349,13 +347,93 @@ button {
     cursor: pointer;
     content: "\f14a";
     font-size: 25px;
+    color: #645C55;
 
 }
 .form input{
     width: 100%;
-    height: 20px;
+    height: 25px;
     outline: none;
     margin-right: 5px;
-    border-radius: 4px;
+    border-radius: 6px;
+    border: none;
+    text-indent: 7px;
+    background-color: #e9e9e9;
+}
+.ui-button .ui-icon {
+    background-image: none;
+    background-position: 0;
+    text-indent: 0;
+    width: 25px;
+    height: 25px;
+    margin: 0;
+    /*right: 0;*/
+    /*bottom: 0;*/
+}
+.ui-button .ui-icon:before{
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    cursor: pointer;
+    content: "\f14a";
+    font-size: 25px;
+    color: #645C55;
+
+}
+.ui-button .ui-icon:hover {
+    background-image: none;
+    background-position: 0;
+    text-indent: 0;
+    width: 25px;
+    height: 25px;
+
+}
+.ui-button:hover .ui-icon:before{
+    font-family: "Font Awesome 6 Free";
+    font-weight: 400;
+    cursor: pointer;
+    content: "\f14a";
+    font-size: 25px;
+    color: #645C55;
+}
+.ui-button-icon-only .ui-icon{
+    /*position: inherit;*/
+    top: -10%;
+    left: -8px;
+}
+.ui-button:focus .ui-icon {
+    background-image: none;
+}
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {
+    border: none;
+    background: none;
+
+}
+.ui-button:hover .ui-icon {
+    background-image: none;
+}
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
+    border-radius: 6px;
 }
 
+.ui-widget.ui-widget-content{
+    max-width: 500px !important;
+    width: 100% !important;
+    box-shadow:
+            0 0 0 5px rgb(255,255,255),
+            15px 15px 15px rgba(0,0,0,0.3);
+    position: fixed;
+}
+
+.ui-widget-header {
+    border: none;
+    background: #e9e9e9;
+    font: 14px/20px poppinsregular;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #645C55;
+}
+.ui-dialog .ui-dialog-title {
+    margin: 0;
+    width: 100%;
+}
